deploy/kubernetes/zipkin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: zipkin
  name: zipkin
spec:
  replicas: 3
  selector:
    matchLabels:
      app: zipkin
  template:
    metadata:
      labels:
        app: zipkin
    spec:
      containers:
        - image: openzipkin/zipkin:2.11
          name: zipkin
          livenessProbe:
            httpGet:
              path: /
              port: 9411
            initialDelaySeconds: 30
            periodSeconds: 5
