deploy/kubernetes/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  ports:
    - name: postgres
      nodePort: 30007
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app: postgres
  type: NodePort
