deploy/kubernetes/zipkin-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: zipkin
  name: zipkin
spec:
  ports:
    - port: 9411
      protocol: TCP
      targetPort: 9411
  selector:
    app: zipkin
  type: ClusterIP
