deploy/kubernetes/zipkin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: zipkin
  name: zipkin
spec:
  replicas: 2
  selector:
    matchLabels:
      app: zipkin
  template:
    metadata:
      labels:
        app: zipkin
    spec:
      containers:
        - name: zipkin
          image: openzipkin/zipkin:2.11
          ports:
            - containerPort: 9411
          livenessProbe:
            httpGet:
              path: /
              port: 9411
            initialDelaySeconds: 30
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: zipkin
  labels:
    app: zipkin
spec:
  type: ClusterIP
  ports:
    - port: 9411
      protocol: TCP
#      for container
      targetPort: 9411
  selector:
    app: zipkin
