deploy/kubernetes/zipkin-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: zipkin
spec:
  rules:
  - host: zipkin.127.0.0.1.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: zipkin
          servicePort: 9411
